--- a/OsmAnd/res/values-es-rAR/phrases.xml
+++ b/OsmAnd/res/values-es-rAR/phrases.xml
@@ -944,7 +944,7 @@
 
 	<string name="poi_access_delivery">Acceso para entregas</string>
 	<string name="poi_monitoring_station">Estación de monitoreo</string>
-	<string name="poi_capital">Capital</string>
+	<string name="poi_capital">Sí</string>
 	<string name="poi_fee_no">No</string>
 
 	<string name="poi_email">Correo electrónico;Email</string>
@@ -3941,7 +3941,7 @@
 <string name="poi_bulk_purchase">Compra al por mayor</string>
 	<string name="poi_substation_type">Tipo de subestación</string>
 
-<string name="poi_bulk_purchase_yes">Compra al por mayor: sí</string>
+<string name="poi_bulk_purchase_yes">Sí</string>
 	<string name="poi_bulk_purchase_only">Compra al por mayor: solamente</string>
 
 	<string name="poi_pipeline_substation">Subestación de tuberías</string>
