--- a/OsmAnd/res/values-es-rUS/phrases.xml
+++ b/OsmAnd/res/values-es-rUS/phrases.xml
@@ -208,7 +208,7 @@
 	<string name="poi_railway_platform">Andén de tren</string>
 	<string name="poi_halt">Parada de tren</string>
 	<string name="poi_subway_entrance">Entrada de metro;Entrada de subte</string>
-	<string name="poi_subway_station">Estación de metro;Estación de subte</string>
+	<string name="poi_subway_station">Sí</string>
 	<string name="poi_railway_buffer_stop">Fin de vía</string>
 	<string name="poi_taxi">Parada de taxi;Remis</string>
 	<string name="poi_aerodrome">Aeropuerto;Aeródromo</string>
@@ -890,7 +890,7 @@
 	<string name="poi_access_agricultural">Acceso agrícola</string>
 	<string name="poi_access_delivery">Acceso para entregas</string>
 	<string name="poi_monitoring_station">Estación de monitoreo</string>
-	<string name="poi_capital">Capital</string>
+	<string name="poi_capital">Sí</string>
 	<string name="poi_fee_no">No</string>
 	<string name="poi_email">Correo electrónico;Email</string>
 	<string name="poi_fax">Fax</string>
@@ -3700,7 +3700,7 @@
 <string name="poi_bulk_purchase">Compra al por mayor</string>
 	<string name="poi_substation_type">Tipo de subestación</string>
 
-<string name="poi_bulk_purchase_yes">Compra al por mayor: sí</string>
+<string name="poi_bulk_purchase_yes">Sí</string>
 	<string name="poi_bulk_purchase_only">Compra al por mayor: solamente</string>
 
 	<string name="poi_pipeline_substation">Subestación de tuberías</string>
