--- a/OsmAnd/res/values-es/phrases.xml
+++ b/OsmAnd/res/values-es/phrases.xml
@@ -144,7 +144,7 @@
 	<string name="poi_railway_station">Estación de tren</string>
 	<string name="poi_halt">Parada de tren</string>
 	<string name="poi_subway_entrance">Entrada de metro</string>
-	<string name="poi_subway_station">Estación de metro</string>
+	<string name="poi_subway_station">Sí</string>
 	<string name="poi_aerodrome">Aeropuerto</string>
 	<string name="poi_helipad">Helipuerto</string>
 	<string name="poi_taxi">Parada de taxi</string>
@@ -947,7 +947,7 @@
 
 	<string name="poi_access_delivery">Acceso para entregas</string>
 	<string name="poi_monitoring_station">Estación de monitoreo</string>
-	<string name="poi_capital">Capital</string>
+	<string name="poi_capital">Sí</string>
 	<string name="poi_fee_no">No</string>
 
 	<string name="poi_email">Email</string>
@@ -3923,7 +3923,7 @@
 <string name="poi_bulk_purchase">Compra al por mayor;Compra a granel</string>
 	<string name="poi_substation_type">Tipo de subestación</string>
 
-<string name="poi_bulk_purchase_yes">Compra al por mayor: sí</string>
+<string name="poi_bulk_purchase_yes">Sí</string>
 	<string name="poi_bulk_purchase_only">Compra al por mayor: solamente</string>
 
 	<string name="poi_pipeline_substation">Subestación de tuberías</string>
