--- a/OsmAnd/res/layout/along_the_route_radius_simple.xml
+++ b/OsmAnd/res/layout/along_the_route_radius_simple.xml
@@ -4,31 +4,45 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="?attr/selectableItemBackground"
 	android:minHeight="44dp"
-	android:orientation="horizontal">
+	android:orientation="vertical">
 
-	<TextView
-		android:id="@+id/title"
-		android:layout_width="0dp"
+	<LinearLayout
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center_vertical"
-		android:layout_marginLeft="64dp"
-		android:layout_marginStart="64dp"
-		android:layout_weight="1"
-		android:text="@string/search_radius_proximity"
-		android:textSize="@dimen/default_desc_text_size" />
+		android:background="?attr/selectableItemBackground"
+		android:minHeight="44dp"
+		android:orientation="horizontal">
 
-	<net.osmand.plus.widgets.TextViewEx
-		android:id="@+id/description"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center_vertical"
-		android:layout_marginLeft="16dp"
-		android:layout_marginRight="16dp"
-		android:textColor="@color/color_myloc_distance"
-		android:textSize="@dimen/default_desc_text_size"
-		osmand:typeface="@string/font_roboto_medium"
-		tools:text="500 m" />
+		<TextView
+			android:id="@+id/title"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_vertical"
+			android:layout_marginLeft="64dp"
+			android:layout_marginStart="64dp"
+			android:layout_weight="1"
+			android:text="@string/search_radius_proximity"
+			android:textSize="@dimen/default_desc_text_size" />
+
+		<net.osmand.plus.widgets.TextViewEx
+			android:id="@+id/description"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_vertical"
+			android:layout_marginLeft="16dp"
+			android:layout_marginRight="16dp"
+			android:textColor="@color/color_myloc_distance"
+			android:textSize="@dimen/default_desc_text_size"
+			osmand:typeface="@string/font_roboto_medium"
+			tools:text="500 m" />
+
+	</LinearLayout>
+
+	<View
+		android:id="@+id/bottom_divider"
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:layout_marginTop="8dp" />
 
 </LinearLayout>
