--- a/OsmAnd/res/layout/bottom_sheet_item_with_switch_56dp.xml
+++ b/OsmAnd/res/layout/bottom_sheet_item_with_switch_56dp.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
@@ -12,11 +11,11 @@
 
 	<ImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="@dimen/standard_icon_size"
+		android:layout_height="@dimen/standard_icon_size"
 		android:layout_marginEnd="@dimen/bottom_sheet_icon_margin"
 		android:layout_marginRight="@dimen/bottom_sheet_icon_margin"
-		tools:src="@drawable/ic_action_coordinates_latitude"/>
+		tools:src="@drawable/ic_action_coordinates_latitude" />
 
 	<TextView
 		android:id="@+id/title"
@@ -26,7 +25,7 @@
 		android:layout_marginRight="@dimen/content_padding"
 		android:layout_weight="1"
 		android:ellipsize="end"
-		android:maxLines="1"
+		android:maxLines="2"
 		android:textAppearance="@style/TextAppearance.ListItemTitle"
 		tools:text="Some Title"/>
 
