--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3855,4 +3855,6 @@
 	<string name="poi_substation_inspection_gauge">Контрольно-измерительная</string>
 	<string name="poi_substation_field_gathering">Собирательная</string>
 
+	<string name="poi_craft_confectionery">Кондитерская (производство)</string>
+
 </resources>
