--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3857,4 +3857,6 @@
 
 	<string name="poi_craft_confectionery">Кондитерская (производство)</string>
 
+	<string name="poi_shop_wholesale">Оптовый магазин</string>
+
 </resources>
