--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3881,4 +3881,6 @@
 
 	<string name="poi_craft_confectionery">Confectionery production</string>
 
+	<string name="poi_shop_wholesale">Wholesale store</string>
+
 </resources>
